--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
         <div class="text-columb-1">
             <h1 class="h1-footer">Основные</h1>
             <a class="black-gibbi" href=""><p class="text-footer-p">Главная</p></a>
-            <a class="black-gibbi" href="../HTML/Website7.html"><p class="text-footer-p">Курсы</p></a>
+            <a class="black-gibbi" href="HTML/Website7.html"><p class="text-footer-p">Курсы</p></a>
             <a class="black-gibbi" href=""><p class="text-footer-p">События</p></a>
-            <a class="black-gibbi" href="./Website2.html"><p class="text-footer-p">Об академии</p></a>
-            <a class="black-gibbi" href="./Website3.html"><p class="text-footer-p">Контакты</p></a> 
+            <a class="black-gibbi" href="HTML/Website2.html"><p class="text-footer-p">Об академии</p></a>
+            <a class="black-gibbi" href="HTML/Website3.html"><p class="text-footer-p">Контакты</p></a> 
         </div>
         <div class="text-columb-2">
             <h1 class="h1-footer">Курсы</h1>
@@ -245,15 +245,15 @@
         <div class="text-columb-4">
             <h1 class="h1-footer">Контакты</h1>
             <div class="flex">
-                <img class="image-icon-footer-1" src="../Картинки/pinpng.com-dot-icon-png-2086901.png" alt="">
+                <img class="image-icon-footer-1" src="Картинки/pinpng.com-dot-icon-png-2086901.png" alt="">
                 <p class="text-footer-p-p1">г.Алматы, ул.Достык 162 к5</p>
             </div>
             <div class="flex">
-                <img class="image-icon-footer-2" src="../Картинки/pngfind.com-telephone-icon-png-369746.png" alt="">
+                <img class="image-icon-footer-2" src="Картинки/pngfind.com-telephone-icon-png-369746.png" alt="">
                 <p class="text-footer-p-p1">+7 706 400 36 44 +7 707 110 82 32</p>
             </div>
             <div class="flex">
-                <img class="image-icon-footer-3" src="../Картинки/Daco_4064141.png" alt="">
+                <img class="image-icon-footer-3" src="Картинки/Daco_4064141.png" alt="">
                 <p class="text-footer-p-p1">Contact@morrison.kz</p>
             </div>
         </div>
